Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78767

baseGradient for Surface3DSeries is applied incorrectly when the trailing line(s) of the QSurfaceDataArray contain NaN only

    XMLWordPrintable

Details

    • 55bd8fbf38d3eede7ae7cf0eed357117e9eeba98 (qt/qtdatavis3d/dev) 6a34cb0db0b177ecc09eea0c623906e1504ca580 (qt/qtdatavis3d/6.1)

    Description

      When subclassing QItemModelSurfaceDataProxy to provide custom data for a Surface3DSeries which is using Theme3D.ColorStyleObjectGradient for coloring the 3D surface, the gradient is applied incorrectly (the whole surface receives the color at position 0 of the ColorGradient) when the trailing line(s) of the QSurfaceDataArray are comprosed of all NaN (in order to "slice" through the surface).

      The attached example project shows this - using a Timer we continually regenerate the surface data with a single line missing, where the missing line position changes continually. For all indices of the missing line other than the last index in the array, the gradient is applied correctly. When the missing line reaches the last line, the whole surface is shown in constant blue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            oulu_hillbilly Sami Varanka
            aamann aamann
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes