Fix: basegradient applied incorrectly to surface

When surface data contains NaN/Inf values,
the basegradient might get applied incorrectly.
Fixed the error by adding check for NaN/Inf in
getNormalizedVertex.

Fixes: QTBUG-78767
Change-Id: I94d850f8ed21bc98dcbc4ba26b02989c1c1bf90b
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 55bd8fbf38d3eede7ae7cf0eed357117e9eeba98)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>